changes to contact fixing layout issues

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,16 +1,17 @@
 
 main {
-    margin-left: -32.5em;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 15% 15% 15% 15% 15% 15% 15% 50%;
+    margin-left: -2em;
+    margin-top: 1em;
+    padding-top: 2em;
     text-align: center;
+    font-size: x-large;
+    font-weight: 600;
 }
 
 form {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 2em 2em 2em 2em 2em 2em 2em;
+    grid-template-rows: 2em 2em 2em 2em 2em 2em 2em 2em;
 }
 
 aside {
